--- a/Unlimited Bananas-proj3.vcxproj.filters
+++ b/Unlimited Bananas-proj3.vcxproj.filters
@@ -108,6 +108,9 @@
     <ClInclude Include="EventView.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Fish.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Manager.cpp">
@@ -201,6 +204,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="EventView.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Fish.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
