--- a/Unlimited Bananas-proj3.vcxproj.filters
+++ b/Unlimited Bananas-proj3.vcxproj.filters
@@ -111,6 +111,9 @@
     <ClInclude Include="Fish.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Lure.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Manager.cpp">
@@ -207,6 +210,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Fish.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Lure.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
