--- a/Unlimited Bananas-proj3.vcxproj.filters
+++ b/Unlimited Bananas-proj3.vcxproj.filters
@@ -114,6 +114,9 @@
     <ClInclude Include="Lure.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ViewCaught.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Manager.cpp">
@@ -213,6 +216,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Lure.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ViewCaught.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
